<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Post like</string>
    <string name="description_post_share">Post share</string>
    <string name="description_post_views">Post view</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_postedit_cancel">Cancel post editing</string>
    <string name="editTitle">Edit message</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
    <string name="description_play_video">Play video</string>
    <string name="post_content_hint">Input post content here</string>
    <string name="video_url_hint">Input video URL here</string>
    <string name="error_invalid_video_url">Incorrect video URL</string>
    <string name="video_placeholder">Video placeholder</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="google_play_unavailable">Google API Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">User %1$s posted new post:</string>
    <string name="new_post_title">New post</string>
    <string name="warning">Warning!</string>
    <string name="unknown_action">Unknown action: %1$s</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="no_posts">No posts</string>
    <string name="img_placeholder">Image placeholder</string>
    <string name="new_posts_banner">Свежие записи: %d</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="ad_image">AD Image</string>
</resources>
