<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/netology" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.AppTheme.FooterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_post_menu"
            android:minWidth="0dp"
            android:minHeight="48dp"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar,published,menu" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:autoLink="web"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:text="@sample/posts.json/data/content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imgContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#333333"
                    android:contentDescription="@string/img_placeholder"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/videoContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgContainer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/videoThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#333333"
                    android:contentDescription="@string/video_placeholder"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_video_placeholder"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/playButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:clickable="true"
                    android:contentDescription="@string/description_play_video"
                    android:focusable="true"
                    android:src="@drawable/ic_play_circle"
                    app:layout_constraintBottom_toBottomOf="@id/videoThumbnail"
                    app:layout_constraintEnd_toEndOf="@id/videoThumbnail"
                    app:layout_constraintStart_toStartOf="@id/videoThumbnail"
                    app:layout_constraintTop_toTopOf="@id/videoThumbnail"
                    app:tint="@android:color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="content,videoContainer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_post_like"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="48dp"
            app:icon="@drawable/ic_like_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            tools:text="10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.AppTheme.FooterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:contentDescription="@string/description_post_share"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="48dp"
            app:icon="@drawable/ic_share_24"
            app:layout_constraintStart_toEndOf="@id/like"
            app:layout_constraintTop_toBottomOf="@id/footer"
            tools:text="5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view1"
            style="@style/Widget.AppTheme.FooterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_spacing"
            android:clickable="false"
            android:contentDescription="@string/description_post_views"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:minHeight="48dp"
            app:icon="@drawable/ic_views_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            tools:text="100" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>