<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/editCancelTop"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/editCancelTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="editedContent,cancelButton" />

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:hint="@string/editTitle"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editedContent"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editCancelTop"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/editedContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:hint="@string/post_text"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/editTop"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_postedit_cancel"
        app:layout_constraintBottom_toTopOf="@id/editTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editedContent"
        app:srcCompat="@drawable/ic_cancel_48" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/editTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,saveButton" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTop" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintTop_toBottomOf="@id/editTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:srcCompat="@drawable/ic_save_48" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/editGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="editCancelTop,editTitle,editedContent,cancelButton, editTop,content,saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>